<resources>
    <string name="app_name">Dogopedia</string>
    <string name="title_home">Quiz</string>
    <string name="title_dashboard">Dogs</string>
    <string name="title_notifications">Products</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="welcome">Welcome to Dogopedia!</string>

    <string name="apt_adapt">Apartment Adaptability</string>
    <string name="owner_exp">Good for New Owners</string>
    <string name="alone_tolerance">Tolerance for Being Alone</string>
    <string name="cold_tolerance">Cold Tolerance</string>
    <string name="heat_tolerance">Heat Tolerance</string>
    <string name="shedding">Shedding Level</string>
    <string name="exercise">Exercise Level</string>
    <string name="bark_howl">Barking and Howling Tendency</string>
    <string name="grooming">Grooming Ease</string>

    <string name="img_desc">Dog</string>

    <string name="dryOrWet">"Dry/Wet:</string>
    <string name="price">Price:</string>
    <string name="rating">Rating:</string>
    <string name="proteinValue">Protein Value:</string>
    <string name="weight">Product Weight:</string>
    <string name="img_descr">Displays an image of the item.</string>
    <string name="link">Link to Purchase Item:</string>

    <string name="food_tab">Food</string>
    <string name="toy_tab">Toys</string>
    <string name="toy_type">Type:</string>
    <string name="squeak">Is this toy squeaky?</string>
    <string name="prod_dims">Product Dimensions:</string>

    <string name="adopt">Adoption</string>
    <string name="petFinderTab">PetFinder</string>
    <string name="aspcaTab">ASPCA</string>
    <string name="adoptApetTab">Adopt a Pet</string>

    <string name="dog_desc">Dog</string>
    <string name="food_desc">Dog Food</string>
    <string name="toy_desc">Dog Toy</string>

    <string name="start_q">Start Quiz</string>

</resources>