<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pets.dogopedia.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="pets.dogopedia.ui.dogs.DogsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dogs" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="pets.dogopedia.ui.products.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_adoption"
        android:name="pets.dogopedia.ui.adoption.AdoptionFragment"
        android:label="Adoption"
        tools:layout="@layout/fragment_adoptions"/>
</navigation>