<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        app:cardBackgroundColor="@color/snow"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="200dip"
                android:layout_height="200dip"
                android:layout_gravity="center"
                android:layout_marginStart="75dip"
                android:layout_marginLeft="75dip"
                android:layout_marginTop="25dip"
                android:layout_marginEnd="75dip"
                android:layout_marginRight="75dip"
                android:layout_marginBottom="25dip"
                android:padding="25dip"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/toy_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/img_desc"
                    android:padding="30dp"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/toy_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/toy_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <RatingBar
                android:id="@+id/toy_ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                android:theme="@style/ratingbar" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/toy_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/price"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/toy_price_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/toy_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/toy_type"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/toy_type_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/squeak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/squeak"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/is_squeaky"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/dimensions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/prod_dims"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dims"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

